--- a/install/yearning-docker-compose/docker-compose.yml
+++ b/install/yearning-docker-compose/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       MYSQL_USER: yearning
       MYSQL_PASSWORD: yearning
   yearning:
-    image: registry.cn-hangzhou.aliyuncs.com/cookie/yearning:v1.3.4
+    #image: registry.cn-hangzhou.aliyuncs.com/cookie/yearning:v1.3.4
+    image: registry.cn-hangzhou.aliyuncs.com/lancger_ops/yearning_base:v1.0.0
     depends_on: 
       - db
     ports:
@@ -27,6 +28,3 @@ services:
       MYSQL_PASSWORD: yearning
       MYSQL_USER: root
       MYSQL_ADDR: db
-
-# 默认账号：admin，默认密码：Yearning_admin
-# 感谢 eacdy 张功震 贡献
