--- a/install/nginx.conf
+++ b/install/nginx.conf
@@ -23,6 +23,11 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
+    add_header Access-Control-Allow-Origin *; 
+    add_header Access-Control-Allow-Headers Content-Type;
+    add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
+    add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE, PATCH";
+
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
