--- a/install/yearning-docker-compose/docker/etc/mysql/my.cnf
+++ b/install/yearning-docker-compose/docker/etc/mysql/my.cnf
@@ -10,4 +10,5 @@ character-set-client-handshake = FALSE
 character-set-server = utf8
 collation-server = utf8_unicode_ci
 init_connect='SET NAMES utf8'
+#mysql日志时间戳与系统保持一致
 log_timestamps = SYSTEM
